# xserialization

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  LICENSE  flake.nix  readme.md
.github/workflows/: cmake.yml
json/: CMakeLists.txt
json/include/serialization/json/: json.hpp  json_deserializer.hpp  json_serialization.hpp  json_serializer.hpp  json_trait.hpp
json/include/xserialization/json/: json.hpp  json_base.hpp  json_deserializer.hpp  json_serialization.hpp  json_serializer.hpp  json_trait.hpp
json/include/xserialization/json/inner/: json_base.hpp  opaque_json.hpp
json/src/json/: json.cpp  json_deserializer.cpp  json_serializer.cpp  util.hpp
json/src/json/inner/: json_impl.hpp  opaque_json.cpp
json/test/: CMakeLists.txt  json_deserializer_test.cpp  json_serializer_test.cpp  test.cpp
nix/: build.nix  shell.nix
sample/: CMakeLists.txt
sample/src/: main.cpp
serialization/: CMakeLists.txt
serialization/include/serialization/: CollectionDeserializer.h  CollectionSerializer.h  Context.h  IDeserializer.h  ISerializer.h  MetaObject.h  MetaObjectDeserializer.h  MetaObjectSerializer.h  base_serializer.hpp  context.hpp  deserializer.hpp  factory.h  meta_annotation.hpp  null.hpp  operator.hpp  serializable_class.hpp  serialization.h  serialization.hpp  serialization_trait.hpp  serializer.hpp  typeutil.hpp  util.hpp
serialization/include/serialization/exception/: SerializationException.h  deserializer_exception.hpp  serialization_exception.hpp  serializer_exception.hpp
serialization/include/serialization/inner/: attribute.hpp  builtin_serialization_traits.hpp  collection_deserializer.hpp  collection_serializer.hpp  collection_trait.hpp  dict_deserializer.hpp  dict_serializer.hpp  dict_trait.hpp  meta_object.hpp  meta_object_deserializer.hpp  meta_object_serializer.hpp
serialization/include/xserialization/: base_serializer.hpp  context.hpp  deserializer.hpp  meta_annotation.hpp  null.hpp  operator.hpp  serialization.hpp  serialization_trait.hpp  serializer.hpp  typeutil.hpp  util.hpp  valutil.hpp
serialization/include/xserialization/exception/: deserializer_exception.hpp  serialization_exception.hpp  serializer_exception.hpp
serialization/include/xserialization/inner/: atom_deserializer.hpp  atom_serializer.hpp  attribute.hpp  builtin_serialization_traits.hpp  collection_deserializer.hpp  collection_serializer.hpp  collection_trait.hpp  dict_deserializer.hpp  dict_serializer.hpp  dict_trait.hpp  meta_field.hpp  meta_object.hpp  meta_object_deserializer.hpp  meta_object_serializer.hpp
serialization/src/: MetaObjectDeserializer.cpp  MetaObjectSerializer.cpp  base_serializer.cpp  factory.cpp  serialization.cpp
serialization/src/inner/: meta_object.cpp  meta_object_deserializer.cpp  meta_object_serializer.cpp
serialization/test/: CMakeLists.txt  MetaObjectSerializerTest.cpp  atom_serialization_test.cpp  collection_serialization_test.cpp  meta_object_serializer_test.cpp  test.cpp
variant/: CMakeLists.txt
variant/include/variant/: TypeDescr.h  Variant.h
