cmake_minimum_required(VERSION 3.5)

set(XSERIALIZATION_JSON "xserialization_json")
set(XSERIALIZATION_JSON ${XSERIALIZATION_JSON} PARENT_SCOPE)

file(GLOB_RECURSE XSERIALIZATION_JSON_SRCS "src/**/*.cpp")

set(XSERIALIZATION_JSON_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include")

find_package(nlohmann_json REQUIRED)

add_library(${XSERIALIZATION_JSON} SHARED ${XSERIALIZATION_JSON_SRCS})
target_link_libraries(${XSERIALIZATION_JSON}
    PUBLIC ${XSERIALIZATION}
    PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(${XSERIALIZATION_JSON} PUBLIC
    "$<BUILD_INTERFACE:${XSERIALIZATION_JSON_INCLUDES}>"
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
    PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")

install(TARGETS ${XSERIALIZATION_JSON} EXPORT XSerializationTargets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(DIRECTORY "${XSERIALIZATION_JSON_INCLUDES}/"
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

add_subdirectory(test)
